AML 0.1.6, 2015-05-26
-----------------------
- Updated CSPWebReasoner.

AML 0.1.5, 2015-05-21
-----------------------
- Added support to "iff" and "exludes" expressions.
- Added relational operator NEQ.
- Fixed CSPModel objective function bug.

AML 0.1.4, 2015-05-15 (Not tested)
-----------------------
- Constraints sum operation bug fixed.
- Added objective function to CSPModel.

AML 0.1.3, 2015-05-13 (Not tested)
-----------------------
- Fixed method "negate" of CSPModel.
- Updated AreCompliant operation.
- Added WhyAreNotCompliant operation first version.

AML 0.1.2, 2015-05-06
-----------------------
- Updated model with definition and monitoring references.
- Fixed AreCompliant operation.
- Updated iAgree parser.

AML 0.1.1, 2015-04-28
-----------------------
- Fixed AreCompliant operation.

AML 0.1.0, 2015-04-27
-----------------------
- AML now support enum datatypes.
- Added method to support AND constraints breaking.
- AML now support WSAG old versions.