@@ -1,7 +1,7 @@
 {
     "defaultInputFormat": "IAGREE",
     "CSPReasoner": "CPLEX",
-    "CSPWebReasonerEndpoint": "https://labs.isa.us.es:8181/CSPWebReasoner",
+    "CSPWebReasonerEndpoint": "http://150.214.188.130:8080/CSPWebReasoner",
     "DLReasoner": "none",
     "ANDConstraintsBreaking" : "true"
 }
